[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/images/player.png" type="Texture" id=1]
[ext_resource path="res://characters/diver/Dive.gd" type="Script" id=2]
[ext_resource path="res://characters/diver/DiverStateMachine.gd" type="Script" id=3]
[ext_resource path="res://characters/diver/Jump.gd" type="Script" id=4]
[ext_resource path="res://characters/diver/ClimbLadder.gd" type="Script" id=5]
[ext_resource path="res://characters/diver/WalkBoard.gd" type="Script" id=6]
[ext_resource path="res://characters/diver/JumpFall.gd" type="Script" id=7]
[ext_resource path="res://characters/diver/GroundSplat.gd" type="Script" id=8]
[ext_resource path="res://characters/diver/GracefulEntrance.gd" type="Script" id=9]
[ext_resource path="res://characters/diver/Diver.gd" type="Script" id=10]
[ext_resource path="res://characters/diver/SloppyEntrance.gd" type="Script" id=11]
[ext_resource path="res://characters/diver/WalkFall.gd" type="Script" id=12]
[ext_resource path="res://assets/sounds/dive-pose.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/dive-sloppy.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/jump_spring.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/fall.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/walk_fall.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/splat.wav" type="AudioStream" id=18]
[ext_resource path="res://effects/sloppy_dive_particles.tres" type="Material" id=19]
[ext_resource path="res://effects/graceful_dive_particles.tres" type="Material" id=20]

[sub_resource type="Animation" id=1]
resource_name = "climb"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="Animation" id=2]
resource_name = "dive"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "splat"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8, 8 )

[node name="Diver" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -11 )
texture = ExtResource( 1 )
offset = Vector2( 0, -1 )
hframes = 22
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/climb = SubResource( 1 )
anims/dive = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jump_up = SubResource( 4 )
anims/splat = SubResource( 5 )
anims/walk = SubResource( 6 )
anims/walk-fall = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 8 )

[node name="DiverStateMachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="ClimbLadder" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 5 )

[node name="ClimbAudio" type="AudioStreamPlayer" parent="DiverStateMachine/ClimbLadder"]
volume_db = -6.0
pitch_scale = 0.7

[node name="AudioTimer" type="Timer" parent="DiverStateMachine/ClimbLadder"]
wait_time = 0.25

[node name="WalkBoard" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 6 )

[node name="WalkAudio" type="AudioStreamPlayer" parent="DiverStateMachine/WalkBoard"]
volume_db = -6.0
pitch_scale = 0.7

[node name="AudioTimer" type="Timer" parent="DiverStateMachine/WalkBoard"]
wait_time = 0.25

[node name="WalkFall" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 12 )

[node name="FallAudio" type="AudioStreamPlayer" parent="DiverStateMachine/WalkFall"]
stream = ExtResource( 17 )
volume_db = -5.0
pitch_scale = 0.75

[node name="Jump" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 4 )

[node name="JumpAudio" type="AudioStreamPlayer" parent="DiverStateMachine/Jump"]
stream = ExtResource( 15 )
pitch_scale = 0.9

[node name="JumpFall" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 7 )

[node name="GroundCheckDelay" type="Timer" parent="DiverStateMachine/JumpFall"]
wait_time = 0.1
one_shot = true

[node name="FallAudio" type="AudioStreamPlayer" parent="DiverStateMachine/JumpFall"]
stream = ExtResource( 16 )
volume_db = -5.0
pitch_scale = 0.6

[node name="Dive" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 2 )

[node name="PoseTimer" type="Timer" parent="DiverStateMachine/Dive"]
one_shot = true

[node name="PoseAudio" type="AudioStreamPlayer" parent="DiverStateMachine/Dive"]
stream = ExtResource( 13 )
pitch_scale = 0.85

[node name="GracefulEntrance" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 9 )

[node name="Particles2D" type="Particles2D" parent="DiverStateMachine/GracefulEntrance"]
emitting = false
amount = 1
lifetime = 5.0
one_shot = true
local_coords = false
process_material = ExtResource( 20 )

[node name="GracefulDiveAudio" type="AudioStreamPlayer" parent="DiverStateMachine/GracefulEntrance"]

[node name="SloppyEntrance" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 11 )

[node name="Particles2D" type="Particles2D" parent="DiverStateMachine/SloppyEntrance"]
emitting = false
amount = 56
lifetime = 10.0
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = ExtResource( 19 )

[node name="SloppyDiveAudio" type="AudioStreamPlayer" parent="DiverStateMachine/SloppyEntrance"]
stream = ExtResource( 14 )

[node name="GroundSplat" type="Node2D" parent="DiverStateMachine"]
script = ExtResource( 8 )

[node name="SplatAudio" type="AudioStreamPlayer" parent="DiverStateMachine/GroundSplat"]
stream = ExtResource( 18 )

[node name="Timer" type="Timer" parent="DiverStateMachine/GroundSplat"]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="DiverStateMachine/ClimbLadder/AudioTimer" to="DiverStateMachine/ClimbLadder" method="_on_AudioTimer_timeout"]
[connection signal="timeout" from="DiverStateMachine/WalkBoard/AudioTimer" to="DiverStateMachine/WalkBoard" method="_on_AudioTimer2_timeout"]
[connection signal="timeout" from="DiverStateMachine/JumpFall/GroundCheckDelay" to="DiverStateMachine/JumpFall" method="_on_GroundCheckDelay_timeout"]
[connection signal="timeout" from="DiverStateMachine/Dive/PoseTimer" to="DiverStateMachine/Dive" method="_on_PoseTimer_timeout"]
[connection signal="ground_splat_finished" from="DiverStateMachine/GroundSplat" to="." method="_on_GroundSplat_ground_splat_finished"]
[connection signal="timeout" from="DiverStateMachine/GroundSplat/Timer" to="DiverStateMachine/GroundSplat" method="_on_Timer_timeout"]
